--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,113 @@
 # Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
-
-## User settings
-xcuserdata/
-
-## Obj-C/Swift specific
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
 *.hmap
-
-## App packaging
 *.ipa
-*.dSYM.zip
-*.dSYM
+*.xcuserstate
+*.xcscmblueprint
 
-## Playgrounds
-timeline.xctimeline
-playground.xcworkspace
+/fastlane/scripts/upload.sh
+/fastlane/README.md
+/firefox-ios-l10n
+# fastlane temporary profiling data
+/fastlane/report.xml
+# deliver temporary error output
+/fastlane/Error*.png
+# deliver temporary preview output
+/fastlane/Preview.html
+# snapshot generated screenshots
+/fastlane/screenshots
+/fastlane/screenshots/*/*-portrait.png
+/fastlane/screenshots/*/*-landscape.png
+/fastlane/screenshots/screenshots.html
+# frameit generated screenshots
+/fastlane/screenshots/*/*-portrait_framed.png
+/fastlane/screenshots/*/*-landscape_framed.png
+# folders for storing builds and prov profiles
+/builds
+/provisioning-profiles
+/assets
+#build tools
+/fastlane/Appfile
+/fastlane/Snapfile
+/fastlane/SnapshotHelper.swift
+/fastlane/frames
+/fastlane/scripts
+/fastlane/templates
 
-# Swift Package Manager
-#
-# Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-# Packages/
-# Package.pins
-# Package.resolved
-# *.xcodeproj
-#
-# Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
-# hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
+#python environment
+python-env/
 
-.build/
+# OS X
+.DS_Store
 
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# Pods/
-#
-# Add this line if you want to avoid checking in source code from the Xcode workspace
-# *.xcworkspace
+# Vim
+*~
+.*.sw*
 
-# Carthage
-#
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
+# IDEA
+.idea
 
-Carthage/Build/
+Carthage/
 
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo.
-# Instead, use fastlane to re-generate the screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/#source-control
+ThirdParty/google-breakpad
+ThirdParty/YubiKit
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots/**/*.png
-fastlane/test_output
+# Saved Sync credentials for tests.
+signedInUser.json
+
+# Generated config file
+MozBuildID.xcconfig
+
+# Python.
+*.pyc
+
+# SQLite
+*.db-shm
+*.db-wal
+
+# Node.js
+node_modules
+# assets from frameworks
+!ThirdParty/**/node_modules
+
+# Brave
+BuildId.xcconfig
+
+BraveCore/BraveCore.xcframework
+BraveCore/BraveRewards.xcframework
+BraveCore/MaterialComponents.xcframework
+
+Client/Configuration/Local/
+App/Configuration/Local/
+
+adblock-regions.txt
+yubikit.log
+*.p8
+
+# Fastlane Env
+.env
+.env.*
+
+# Packed Scripts
+Sources/Brave/Assets/__firefox__.js
+Sources/Brave/Assets/AllFramesAtDocumentStart.js
+Sources/Brave/Assets/AllFramesAtDocumentEnd.js
+Sources/Brave/Assets/MainFrameAtDocumentStart.js
+Sources/Brave/Assets/MainFrameAtDocumentEnd.js
+Sources/Brave/Assets/AllFramesAtDocumentStartSandboxed.js
+Sources/Brave/Assets/AllFramesAtDocumentEndSandboxed.js
+Sources/Brave/Assets/MainFrameAtDocumentStartSandboxed.js
+Sources/Brave/Assets/MainFrameAtDocumentEndSandboxed.js
+Sources/Brave/Assets/*LICENSE.txt
